<?xml version="1.0"?>
<package format="2">
  <name>ben_gazebo</name>
  <version>0.0.0</version>
  <description>
    Gazebo model of BEN, the Bathymetric Explorer and Navigator.
  </description>

  <author email="roland@ccom.unh.edu">Roland Arsenault</author>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
  <depend>ben_description</depend>
  <depend>usv_gazebo_plugins</depend>
  <depend>vrx_gazebo</depend>
  <depend>wamv_description</depend>
  <depend>wamv_gazebo</depend>

</package>
